--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "Namaste-React",
   "version": "1.0.0",
   "description": "This is namaste react by Akshay",
-  "main": "App.js",
   "scripts": {
     "test": "jest"
   },
@@ -12,6 +11,11 @@
   "author": "Archa Agrawal",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
